// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RideService distancePrice should calculate 1`] = `
Object {
  "aditionalForLongRide": 0,
  "aditionalForOutBusinessTime": 0,
  "total": 2,
}
`;

exports[`RideService distancePrice should calculate 2`] = `
Object {
  "aditionalForLongRide": 0,
  "aditionalForOutBusinessTime": 0,
  "total": 2.8,
}
`;

exports[`RideService distancePrice should calculate 3`] = `
Object {
  "aditionalForLongRide": 0,
  "aditionalForOutBusinessTime": 0.7,
  "total": 2.7,
}
`;

exports[`RideService distancePrice should calculate 4`] = `
Object {
  "aditionalForLongRide": 0,
  "aditionalForOutBusinessTime": 1.1,
  "total": 3.9,
}
`;

exports[`RideService durationPrice should calculate 1`] = `
Object {
  "aditionalForLongRide": 0,
  "aditionalForOutBusinessTime": 0,
  "total": 3,
}
`;

exports[`RideService durationPrice should calculate 2`] = `
Object {
  "aditionalForLongRide": 0,
  "aditionalForOutBusinessTime": 0,
  "total": 5,
}
`;

exports[`RideService durationPrice should calculate 3`] = `
Object {
  "aditionalForLongRide": 0,
  "aditionalForOutBusinessTime": 1,
  "total": 6,
}
`;

exports[`RideService durationPrice should calculate 4`] = `
Object {
  "aditionalForLongRide": 0,
  "aditionalForOutBusinessTime": 2,
  "total": 10,
}
`;
